bin_PROGRAMS =			\
	p11_change_pin		\
	p11_enum_certs		\
	p11_enum_keys		\
	p11_generate_key	\
	p11_init_token		\
	p11_make_csr		\
	p11_store_cert

p11_change_pin_SOURCES = p11_change_pin.c
p11_change_pin_CFLAGS = $(P11TOOLS_CFLAGS)
p11_change_pin_LDADD = $(P11TOOLS_LIBS)

p11_enum_certs_SOURCES = p11_enum_certs.c
p11_enum_certs_CFLAGS = $(P11TOOLS_CFLAGS)
p11_enum_certs_LDADD = $(P11TOOLS_LIBS)

p11_enum_keys_SOURCES = p11_enum_keys.c
p11_enum_keys_CFLAGS = $(P11TOOLS_CFLAGS)
p11_enum_keys_LDADD = $(P11TOOLS_LIBS)

p11_generate_key_SOURCES = p11_generate_key.c
p11_generate_key_CFLAGS = $(P11TOOLS_CFLAGS)
p11_generate_key_LDADD = $(P11TOOLS_LIBS)

p11_init_token_SOURCES = p11_init_token.c
p11_init_token_CFLAGS = $(P11TOOLS_CFLAGS)
p11_init_token_LDADD = $(P11TOOLS_LIBS)

p11_make_csr_SOURCES = p11_make_csr.c
p11_make_csr_CFLAGS = $(P11TOOLS_CFLAGS)
p11_make_csr_LDADD = $(P11TOOLS_LIBS)

p11_store_cert_SOURCES = p11_store_cert.c
p11_store_cert_CFLAGS = $(P11TOOLS_CFLAGS)
p11_store_cert_LDADD = $(P11TOOLS_LIBS)
