bin_PROGRAMS =			\
	tap11_change_pin		\
	tap11_init_pin		\
	tap11_list_certs		\
	tap11_list_keys		\
	tap11_generate_key	\
	tap11_init_token		\
	tap11_make_csr		\
	tap11_store_cert		\
	tap11_store_key

tap11_init_pin_SOURCES = tap11_init_pin.c
tap11_init_pin_CFLAGS = $(TAP11TOOLS_CFLAGS)
tap11_init_pin_LDADD = $(TAP11TOOLS_LIBS)

tap11_change_pin_SOURCES = tap11_change_pin.c
tap11_change_pin_CFLAGS = $(TAP11TOOLS_CFLAGS)
tap11_change_pin_LDADD = $(TAP11TOOLS_LIBS)

tap11_list_certs_SOURCES = tap11_list_certs.c
tap11_list_certs_CFLAGS = $(TAP11TOOLS_CFLAGS)
tap11_list_certs_LDADD = $(TAP11TOOLS_LIBS)

tap11_list_keys_SOURCES = tap11_list_keys.c
tap11_list_keys_CFLAGS = $(TAP11TOOLS_CFLAGS)
tap11_list_keys_LDADD = $(TAP11TOOLS_LIBS)

tap11_generate_key_SOURCES = tap11_generate_key.c
tap11_generate_key_CFLAGS = $(TAP11TOOLS_CFLAGS)
tap11_generate_key_LDADD = $(TAP11TOOLS_LIBS)

tap11_init_token_SOURCES = tap11_init_token.c
tap11_init_token_CFLAGS = $(TAP11TOOLS_CFLAGS)
tap11_init_token_LDADD = $(TAP11TOOLS_LIBS)

tap11_make_csr_SOURCES = tap11_make_csr.c
tap11_make_csr_CFLAGS = $(TAP11TOOLS_CFLAGS)
tap11_make_csr_LDADD = $(TAP11TOOLS_LIBS)

tap11_store_cert_SOURCES = tap11_store_cert.c
tap11_store_cert_CFLAGS = $(TAP11TOOLS_CFLAGS)
tap11_store_cert_LDADD = $(TAP11TOOLS_LIBS)

tap11_store_key_SOURCES = tap11_store_key.c
tap11_store_key_CFLAGS = $(TAP11TOOLS_CFLAGS)
tap11_store_key_LDADD = $(TAP11TOOLS_LIBS)
